feat: implement Google Maps API
Install google_maps_flutter dependencies into project.
Introduce the Google Maps API into the iOS, Android and JS implementations.
Simple JSON styling on map from newly assigned /assets directory.

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,11 @@
         android:label="decarl"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+
+        <!-- Google Maps API key -->
+        <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyBXsZq7PL2lnJQ_SE2AFhxj7Zn-DiDjyi4"/>
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
