--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   firebase_core: ^2.15.1
+  firebase_database: ^10.2.5
   flutter:
     sdk: flutter
   geolocator: ^10.0.0
