feat: added ExternalModelManagement

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,17 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.example.decarl">
+
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-feature android:name="android.hardware.camera.ar" android:required="true"/>
+
+
+    
     <application
         android:label="decarl"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+
 
 
         <!-- Google Maps API key -->
@@ -11,6 +20,8 @@
 
         <meta-data android:name="com.google.android.ar.API_KEY"
                 android:value="AIzaSyCs59KwiBf5kwR_hbE80ySjmq6vEYnWFsE"/>
+
+        
 
         <activity
             android:name=".MainActivity"
