--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
       https://github.com/SoroushBeigi/ar_flutter_plugin.git
   cloud_firestore: ^4.9.2
   geoflutterfire2: ^2.3.15 
+  lucide_icons: ^0.257.0
 
       
 
