feat: community guidelines page finished. removed border from rounded textbox imaes

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,3 +35,5 @@ flutter:
     - assets/map_style.txt
     - assets/triangle.png
     - assets/Chicken_01/
+    - assets/avatar.png
+    - assets/logo_decarl.png
