feat: added temporary images for the user profile to display

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,3 +37,9 @@ flutter:
     - assets/Chicken_01/
     - assets/avatar.png
     - assets/logo_decarl.png
+    - assets/tempimg/1.png
+    - assets/tempimg/2.png
+    - assets/tempimg/3.png
+    - assets/tempimg/4.png
+    - assets/tempimg/5.png
+    - assets/tempimg/6.png
