--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   cloud_firestore: ^4.9.2
   geoflutterfire2: ^2.3.15 
   lucide_icons: ^0.257.0
+  smooth_page_indicator: ^1.1.0
 
       
 
