feat: all welcome screens implemented. navigation rerouted

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,3 +44,5 @@ flutter:
     - assets/tempimg/4.png
     - assets/tempimg/5.png
     - assets/tempimg/6.png
+    - assets/welcome/splash2.png
+    - assets/welcome/splash3.png
